export type DesignModel = Record<string, any>;

export type CatalogTreeType = "Library" | "Plugin";

export type CatalogTreeTarget = {
  name: string;
  sectionNodeId: string;
  type: CatalogTreeType;
  nodes: (designModel: DesignModel) => any[] | undefined;
  gradleConventionPluginNodes?: boolean;
};

export type FlattenedCatalogNode = Record<string, any> & {
  type: CatalogTreeType;
  label: string;
  parentPath: string[];
  path: string[];
  children: any[];
};

export type SyncIdList = string[];
