@startuml figma-design-sync-model-generation-classes
!include ../../../../../docs/uml/includes/theme.puml
!include ../../../../../docs/uml/includes/stereotypes.puml

title figmaDesignSync design-model.json generation classes

top to bottom direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 55
skinparam ranksep 55
hide circle

package "plugin/task/generate" as TaskPackage <<Frame>> {
  class "GenerateFigmaDesignModelTask" as GenerateTask <<gradle>> {
    == Gradle inputs ==
    +versionsFile
    +rootSettingsFile
    +buildLogicSettingsFile
    +projectRootDirectory
    +buildLogicRootDirectory
    +outputFile
    == Task action ==
    +generate()
    -git(arguments) : String
  }
}

package "plugin/di" as DiPackage <<Frame>> {
  class "figmaDesignSyncComponent" as Component <<gradle>> {
    == Exposed services ==
    +designModelGenerator : FigmaDesignModelGenerator
    == Port bindings ==
    #repositoryVersionsPort(dataSource)
    #projectCatalogTreesPort(dataSource)
    #projectModulesPort(dataSource)
    #projectModuleDependenciesPort(dataSource)
  }
}

package "plugin/generator" as GeneratorPackage <<Frame>> {
  class "FigmaDesignModelGenerator" as Generator <<gradle>> {
    == Ports ==
    -repositoryVersionsPort
    -projectCatalogTreesPort
    -projectModulesPort
    -projectModuleDependenciesPort
    == API ==
    +generate(request) : FigmaDesignModelGenerationResult
    == Internal assembly ==
    -buildContent(request) : JsonObject
    -buildCatalogs(request) : JsonObject
    -buildModuleDependencies(request) : JsonObject
  }

  class "FigmaDesignModelGenerationRequest" as Request <<gradle>> {
    == Git snapshot ==
    +branch : String
    +gitSha : String
    +generatedAt : Instant
    == Repository sources ==
    +versionsFile : File
    +rootSettingsFile : File
    +buildLogicSettingsFile : File
    +projectRootDirectory : File
    +buildLogicRootDirectory : File
  }

  class "FigmaDesignModelGenerationResult" as Result <<gradle>> {
    +model : JsonObject
    +modelHash : String
  }

  class "FigmaDesignModelHash" as Hash <<gradle>> {
    +compute(model) : String
  }
}

package "domain/ports" as PortsPackage <<Frame>> {
  interface "RepositoryVersionsPort" as VersionsPort <<port>> {
    +readVersions(source) : Map<String, String>
    +readVersionSections(source) : List<RepositoryVersionSection>
  }

  interface "ProjectCatalogTreesPort" as CatalogTreesPort <<port>> {
    +readLibraryTree(source) : LibraryCatalogTree
    +readPluginTree(source) : PluginCatalogTree
  }

  interface "ProjectModulesPort" as ModulesPort <<port>> {
    +readModules(source) : Set<String>
  }

  interface "ProjectModuleDependenciesPort" as ModuleDependenciesPort <<port>> {
    +readModuleDependencies(source) : Set<ModuleDependency>
  }
}

package "data/datasource" as DataSourcePackage <<Frame>> {
  class "RepositoryVersionsDataSource" as VersionsDataSource <<adapter>>
  class "ProjectCatalogTreesDataSource" as CatalogTreesDataSource <<adapter>>
  class "ProjectModulesDataSource" as ModulesDataSource <<adapter>>
  class "ProjectModuleDependenciesDataSource" as ModuleDependenciesDataSource <<adapter>>
}

class "design-model.json" as DesignModel <<artifact>>

GenerateTask --> Component : creates
Component --> Generator : exposes
GenerateTask ..> Request : creates
GenerateTask --> Generator : generate(request)
Generator ..> Result : returns
GenerateTask --> DesignModel : writes

Generator o--> VersionsPort : reads versions
Generator o--> CatalogTreesPort : reads catalogs
Generator o--> ModulesPort : reads modules
Generator o--> ModuleDependenciesPort : reads dependencies
Generator ..> Hash : computes modelHash

VersionsDataSource ..|> VersionsPort
CatalogTreesDataSource ..|> CatalogTreesPort
ModulesDataSource ..|> ModulesPort
ModuleDependenciesDataSource ..|> ModuleDependenciesPort

VersionsPort -[hidden]down-> CatalogTreesPort
CatalogTreesPort -[hidden]down-> ModulesPort
ModulesPort -[hidden]down-> ModuleDependenciesPort

VersionsDataSource -[hidden]down-> CatalogTreesDataSource
CatalogTreesDataSource -[hidden]down-> ModulesDataSource
ModulesDataSource -[hidden]down-> ModuleDependenciesDataSource

@enduml
